--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
      </div>
    </div>
  </div>
- 
- 309	39
-320	35
-318	45
-314	44
-    
+ <style>
+	 body{
+		 background-color: bule;
+	 }
+ </style>
 	<script type="text/javascript" src="game.js"></script>
 </body>
 </html>
