--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 </head>
 <body>
     <div class="calculator">
+
+	    Amanjoy
         <input type="text" id="display" disabled>
         <div class="buttons">
             <button onclick="clearDisplay()">C</button>
