--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <button onclick="appendToDisplay('.')">.</button>
         </div>
     </div>
+	<div>
+		<p>Aman singh</p>
+	</div>
     <script src="script.js"></script>
 </body>
 </html>
